[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>", "Kornel Lesiński <kornel@geekhood.net>"]
edition = "2021"
build = "build.rs"
categories = ["multimedia::video", "multimedia::encoding", "api-bindings"]
description = "Rust bindings to libvpx"
documentation = "https://kornelski.github.io/rust-vpx/vpx_sys/"
homepage = "https://github.com/kornelski/rust-vpx/tree/master/src/sys"
license = "MPL-2.0"
readme = "README.md"
keywords = ["vp9", "webm"]
links = "vpx"
name = "libvpx-native-sys"
repository = "https://github.com/kornelski/rust-vpx"
version = "4.0.8"

[build-dependencies]
pkg-config = "*"
semver-parser = "*"

[build-dependencies.bindgen]
optional = true
version = "*"

[features]
default = []
generate = ["bindgen"]

[lib]
name = "vpx_sys"
path = "lib.rs"
